fix: css going behind border
this was originally to make it go above the border, i forgot to change it though.

--- a/internal/ui/styles.css
+++ b/internal/ui/styles.css
@@ -20,11 +20,11 @@
   }
 
   .toast-alert-progress{
-    @apply h-1 absolute;
+    @apply h-0.5 absolute;
 
 
-    bottom: calc(0% - var(--border));
-    left: calc(0% - var(--border));
+    bottom: 0;
+    left: 0;
     z-index: 10;
     background: currentColor;
   }
